unpackaged/main/default/objects/ID_Builder__c/ID_Builder__c.object-meta.xml
<CustomObject>
    <description>Admin object used to keep track of sequential number increases for custom ID&#39;s</description>
    <label>ID Builder</label>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>ID Builder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Builder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>