unpackaged/main/default/objects/ID_Builder__c/fields/Auto_Reset_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reset_Current_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected, it will auto reset the current value number</inlineHelpText>
    <label>Auto Reset Current Value</label>
    <type>Checkbox</type>
</CustomField>