unpackaged/main/default/objects/ID_Builder__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <inlineHelpText>Last Used Number in Sequence</inlineHelpText>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>