unpackaged/main/default/objects/ID_Builder__c/fields/ID_Description__c.field-meta.xml
<CustomField>
    <fullName>ID_Description__c</fullName>
    <inlineHelpText>Describe the use of the ID and where.</inlineHelpText>
    <label>ID Description</label>
    <type>TextArea</type>
</CustomField>