unpackaged/main/default/objects/ID_Builder__c/fields/ID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ID_Field_Name__c</fullName>
    <inlineHelpText>Identify the field that ID used in.</inlineHelpText>
    <label>ID Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>