unpackaged/main/default/objects/ID_Builder__c/fields/Placeholder_Position__c.field-meta.xml
<CustomField>
    <fullName>Placeholder_Position__c</fullName>
    <inlineHelpText>Indicate where 0&#39;s should be placed in the number sequence. Leading Eg. 000123. Trailing Eg. 123000. N/A will user number with no placeholders</inlineHelpText>
    <label>Placeholder Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leading</fullName>
            </value>
            <value>
                <fullName>Trailing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>