unpackaged/main/default/objects/ID_Builder__c/fields/Reset_Current_Value_At__c.field-meta.xml
<CustomField>
    <fullName>Reset_Current_Value_At__c</fullName>
    <inlineHelpText>Will reset Current Value when this number is used</inlineHelpText>
    <label>Reset Current Value At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>