unpackaged/main/default/objects/ID_Builder__c/fields/Reset_Current_Value_To__c.field-meta.xml
<CustomField>
    <fullName>Reset_Current_Value_To__c</fullName>
    <inlineHelpText>Number set as last used when reset is enabled</inlineHelpText>
    <label>Reset Current Value To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>