unpackaged/main/default/objects/ID_Builder__c/fields/Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>Starting_Number__c</fullName>
    <inlineHelpText>Enter the number that should be used</inlineHelpText>
    <label>Starting Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>