unpackaged/main/default/objects/ID_Builder__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <inlineHelpText>Indicate the intended object when ID will be used. This is informational and not functional</inlineHelpText>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>