unpackaged/main/default/objects/ID_Builder__c/fields/Total_Digets__c.field-meta.xml
<CustomField>
    <fullName>Total_Digets__c</fullName>
    <inlineHelpText>Enter the total number of digits</inlineHelpText>
    <label>Total Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>