unpackaged/main/default/objects/ID_Builder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Object__c</columns>
    <columns>ID_Field_Name__c</columns>
    <columns>Current_Value__c</columns>
    <columns>Total_Digets__c</columns>
    <columns>Placeholder_Position__c</columns>
    <columns>Auto_Reset_Current_Value__c</columns>
    <columns>Reset_Current_Value_At__c</columns>
    <columns>Reset_Current_Value_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>